# ChatBot

./: CMakeLists.txt  main.c
asset/: asset.c  asset.h
chatbot/: chatbot.c  chatbot.h  curlTest.c  curlTest.h
color/: color.c  color.h
db/: db.c  db.h
dotenv/: dotenv.c  dotenv.h
file/: file.c  file.h
print/: print.c  print.h
user/: user.c  user.h
